[package]
authors = ["Jeff Belgum <jeffbelgum@gmail.com>"]
name = "learn_me_an_os"
version = "0.1.0"

[dependencies]
rlibc = "1.0.0"

[lib]
crate-type = ["staticlib"]

# The development profile, used for `cargo build`.
[profile.dev]
panic = "abort"

# The release profile, used for `cargo build --release`.
[profile.release]
panic = "abort"
