[package]
authors = ["Jeff Belgum <jeffbelgum@gmail.com>"]
name = "learn_me_an_os"
version = "0.1.0"

[dependencies]
bitflags = "0.7.0"
multiboot2 = "0.3.1"
rlibc = "1.0.0"
spin = "0.4.5"
volatile = "0.2.1"

[lib]
crate-type = ["staticlib"]

[profile]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
